--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -5,7 +5,7 @@ services:
       context: .
     restart: always
     container_name: registry.cn-chengdu.aliyuncs.com/jvs-tree/jvs-ui
-    image: jvs-ui
+    image: registry.cn-chengdu.aliyuncs.com/jvs-tree/jvs-ui
     networks:
       - jvs_jvs
     external_links:
