--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -5,7 +5,7 @@ services:
       context: .
     restart: always
     container_name: jvs-ui
-    image: jvs-ui
+    image: 0glg0/jvs-ui:${JVSVERSION}
     networks:
       - jvs_jvs
     external_links:
